# fast-repl

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  docker-clean.sh  pyproject.toml  pyrightconfig.json  setup.sh
.github/workflows/: ci.yaml
app/: __init__.py  auth.py  main.py  manager.py  models.py  repl.py  repl_pool.py  schemas.py  settings.py
app/prisma/: schema.prisma
app/prisma/migrations/20250713081922_init_repl_proof/: migration.sql
app/routers/: backward.py  check.py  health.py
prisma/: schema.prisma
src/fast_repl/: auth.py  errors.py  main.py  repl.py  repl_pool.py  settings.py
tests/: conftest.py  test_api.py  test_manager.py  test_pool.py  test_repl.py  test_split.py  utils.py
tests/match/: test_match.py
tests/performance/: test_benchmark.py  test_performance.py
tests/perfs/: test_perfs.py
